<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:gravity="center_vertical"
    android:paddingTop="@dimen/space_40"
    >
	<LinearLayout
	    android:id="@+id/database_ll"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/space_10"
	    android:padding="@dimen/space_10"
	    android:background="@drawable/common_round_corner_bg_with_border"
	    android:orientation="vertical" >
	    
	    <TextView 
	        style="@style/alarm_main_title"
	        android:text="@string/database_device_id"
	        />
	    <TextView 
	        android:id="@+id/database_device_id_tv"
	        style="@style/alarm_sub_title"
	        android:layout_marginTop="@dimen/space_10"
	        />
	    <TextView 
	        style="@style/alarm_main_title"
	        android:text="@string/database_post"
	        android:layout_marginTop="@dimen/space_10"
	        />
	    <FrameLayout 
	        android:id="@+id/database_post_fl"
	        style="@style/database_fl"
	        >
		    <EditText
		        android:id="@+id/database_post_et" 
		        style="@style/common_disedit_et"
		        android:onClick="forClick"
		        />
		    <ImageView 
		        android:id="@+id/database_post_iv" 
		        style="@style/common_et_right_img"
		        android:background="@drawable/database_post"
		        android:contentDescription="@string/common_img_tips"
		        android:onClick="forClick"
		        />
	    </FrameLayout>
	    <Spinner 
	        android:id="@+id/database_post_spr"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        />
	    <TextView 
	        style="@style/alarm_main_title"
	        android:text="@string/database_age"
	        android:layout_marginTop="@dimen/space_10"
	        />
	    <FrameLayout 
	        android:id="@+id/database_age_fl" 
	        style="@style/database_fl"
	        >
		    <EditText
		        android:id="@+id/database_age_et" 
		        style="@style/common_disedit_et"
		        android:onClick="forClick"
		        />
		    <ImageView 
		        android:id="@+id/database_age_iv" 
		        style="@style/common_et_right_img"
		        android:background="@drawable/database_age"
		        android:contentDescription="@string/common_img_tips"
		        android:onClick="forClick"
		        />
	    </FrameLayout>
	    <Spinner 
	        android:id="@+id/database_age_spr"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        />
	    <TextView 
	        style="@style/alarm_main_title"
	        android:text="@string/database_useful"
	        android:layout_marginTop="@dimen/space_10"
	        />
	    <FrameLayout 
	        android:id="@+id/database_useful_fl" 
	        style="@style/database_fl"
	        >
		    <EditText
		        android:id="@+id/database_useful_et" 
		        style="@style/common_editable_et"
		        />
		    <ImageView 
		        style="@style/common_et_right_img"
		        android:background="@drawable/datagbase_useful"
		        android:contentDescription="@string/common_img_tips"
		        />
	    </FrameLayout>
	    <Button 
	        android:id="@+id/database_submit_btn"
	        style="@style/common_blue_btn"
	        android:text="@string/common_submit"
	        android:layout_marginTop="@dimen/space_30"
	        />
	
	</LinearLayout>
</ScrollView>