<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/shared_preference_set_btn"
        style="@style/common_wh_ww"
        android:text="@string/shared_preference_add"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_15"
        />
    <TextView 
        android:id="@+id/shared_preference_cur_tv"
        style="@style/common_wh_fw"
        android:singleLine="false"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        />
    <View 
        style="@style/common_devider_light"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        />
    <RelativeLayout 
        android:id="@+id/shared_preference_switch1_rl"
        style="@style/alarm_rl"
        >
        <TextView 
            style="@style/alarm_main_title"
            android:text="@string/shared_preference_switch1"
            />
        <CheckBox 
            android:id="@+id/shared_preference_switch1_cb"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@drawable/alarm_vibration_switch"
            android:checked="true"
            />
    </RelativeLayout>
    <View 
        style="@style/common_devider_light"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        />
    <RelativeLayout 
        android:id="@+id/shared_preference_switch2_rl"
        style="@style/alarm_rl"
        >
        <TextView 
            style="@style/alarm_main_title"
            android:text="@string/shared_preference_switch2"
            />
        <CheckBox 
            android:id="@+id/shared_preference_switch2_cb"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@drawable/alarm_vibration_switch"
            android:checked="true"
            />
    </RelativeLayout>
    <View 
        style="@style/common_devider_light"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        />
    <RelativeLayout 
        android:id="@+id/shared_preference_switch3_rl"
        style="@style/alarm_rl"
        >
        <TextView 
            style="@style/alarm_main_title"
            android:text="@string/shared_preference_switch3"
            />
        <CheckBox 
            android:id="@+id/shared_preference_switch3_cb"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@drawable/alarm_vibration_switch"
            android:checked="true"
            />
    </RelativeLayout>
    <View 
        style="@style/common_devider_light"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        />

</LinearLayout>
