<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/common_bg"
	    android:orientation="vertical" >
	    
	    <TextView 
	        android:id="@+id/file_save_internal_tv"
	        style="@style/common_wh_fw"
	        android:text="@string/file_save_internal"
	        android:layout_marginTop="@dimen/space_15"
	        android:layout_marginBottom="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
	    <View 
	        style="@style/common_devider_light"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <TextView 
	        android:id="@+id/file_save_app_internal"
	        style="@style/common_wh_fw"
	        android:singleLine="false"
	        android:layout_marginTop="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <LinearLayout 
	        style="@style/common_wh_fw"
	        android:layout_marginTop="@dimen/space_5"
	        android:orientation="horizontal"
	        android:paddingLeft="@dimen/space_15"
	        android:paddingRight="@dimen/space_15"
	        >
	        <Button 
	            android:id="@+id/file_save_internal_list_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_list"
	            android:onClick="forClick"
	            />
	        <Button 
	            android:id="@+id/file_save_internal_save_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_save"
	            android:onClick="forClick"
	            />
	        <Button 
	            android:id="@+id/file_save_internal_clear_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_clear"
	            android:onClick="forClick"
	            />
	    </LinearLayout>
	    <TextView 
	        android:id="@+id/file_save_internal_file_res_tv"
	        style="@style/common_wh_fw"
	        android:singleLine="false"
	        android:layout_marginTop="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <TextView 
	        android:id="@+id/file_save_app_cache"
	        style="@style/common_wh_fw"
	        android:singleLine="false"
	        android:layout_marginTop="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <LinearLayout 
	        style="@style/common_wh_fw"
	        android:layout_marginTop="@dimen/space_5"
	        android:orientation="horizontal"
	        android:paddingLeft="@dimen/space_15"
	        android:paddingRight="@dimen/space_15"
	        >
	        <Button 
	            android:id="@+id/file_save_cache_list_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_list"
	            android:onClick="forClick"
	            />
	        <Button 
	            android:id="@+id/file_save_cache_save_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_save"
	            android:onClick="forClick"
	            />
	        <Button 
	            android:id="@+id/file_save_cache_clear_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_clear"
	            android:onClick="forClick"
	            />
	    </LinearLayout>
	    <TextView 
	        android:id="@+id/file_save_cache_file_res_tv"
	        style="@style/common_wh_fw"
	        android:singleLine="false"
	        android:layout_marginTop="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <View 
	        style="@style/common_devider_light"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <TextView 
	        android:id="@+id/file_save_externa_tv"
	        style="@style/common_wh_fw"
	        android:text="@string/file_save_external"
	        android:layout_marginTop="@dimen/space_15"
	        android:layout_marginBottom="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
	    <View 
	        style="@style/common_devider_light"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <TextView 
	        android:id="@+id/file_save_external_public_tv"
	        style="@style/common_wh_fw"
	        android:singleLine="false"
	        android:layout_marginTop="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <LinearLayout 
	        style="@style/common_wh_fw"
	        android:layout_marginTop="@dimen/space_5"
	        android:orientation="horizontal"
	        android:paddingLeft="@dimen/space_15"
	        android:paddingRight="@dimen/space_15"
	        >
	        <Button 
	            android:id="@+id/file_save_external_public_list_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_list"
	            android:onClick="forClick"
	            />
	        <Button 
	            android:id="@+id/file_save_external_public_save_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_save"
	            android:onClick="forClick"
	            />
	        <Button 
	            android:id="@+id/file_save_external_public_clear_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_clear"
	            android:onClick="forClick"
	            />
	    </LinearLayout>
	    <TextView 
	        android:id="@+id/file_save_external_public_res_tv"
	        style="@style/common_wh_fw"
	        android:singleLine="false"
	        android:layout_marginTop="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <TextView 
	        android:id="@+id/file_save_external_private_tv"
	        style="@style/common_wh_fw"
	        android:singleLine="false"
	        android:layout_marginTop="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <LinearLayout 
	        style="@style/common_wh_fw"
	        android:layout_marginTop="@dimen/space_5"
	        android:orientation="horizontal"
	        android:paddingLeft="@dimen/space_15"
	        android:paddingRight="@dimen/space_15"
	        >
	        <Button 
	            android:id="@+id/file_save_external_private_list_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_list"
	            android:onClick="forClick"
	            />
	        <Button 
	            android:id="@+id/file_save_external_private_save_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_save"
	            android:onClick="forClick"
	            />
	        <Button 
	            android:id="@+id/file_save_external_private_clear_btn"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/file_save_clear"
	            android:onClick="forClick"
	            />
	    </LinearLayout>
	    <TextView 
	        android:id="@+id/file_save_external_private_res_tv"
	        style="@style/common_wh_fw"
	        android:singleLine="false"
	        android:layout_marginTop="@dimen/space_5"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	    <View 
	        style="@style/common_devider_light"
	        android:layout_marginLeft="@dimen/space_15"
	        android:layout_marginRight="@dimen/space_15"
	        />
	
	</LinearLayout>
</ScrollView>